--- a/app/src/main/res/layout/item_user_details.xml
+++ b/app/src/main/res/layout/item_user_details.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_centerVertical="true"
             android:paddingRight="8dp"
             android:paddingEnd="8dp">
 
